--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+}
+
+
 body, html {
     padding: 0;
     border: 0;
@@ -20,6 +25,11 @@ h1 {
     color: aliceblue;
 }
 
+a {
+    text-decoration: none;
+    color: aliceblue;
+}
+
 header ul li{
     list-style-type: none;
     font-size: 40px;
@@ -28,8 +38,45 @@ header ul li{
 
 }
 
-.flexion-section {
+.flexion-section { /* All major content sections, About, Work, Contact*/
     display: flex;
+    flex: 1 1 0;
+    background-color: yellow;
+}
+
+.section-heading { /* the box containing only the words work, About and Contact me*/
+    border-right: 5px solid black;
+    padding-right: 10px;
+    flex: 0 0 200px;
+    text-align: center;
+}
+
+.content-section {
+    background-color: brown;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project-card {
+    position: relative;
+}
+
+.project-card p {
+    position:absolute;
+    bottom: 10px;
+    background-color: whitesmoke;
+    padding: 5px;
+}
+
+.main-project {
+    width: 100%;
+    background-color:blue;
+}
+
+
+.flexion-section li {
+    list-style-type: none;
+    display: inline;
 }
 
 /* figure {
@@ -40,27 +87,7 @@ header ul li{
     background-size: cover;
     background-position: center;
 } */
-
-/* main section {
-    margin: 0 auto;
-    display: inline-flex;
-    position: relative;
-    background-color: aquamarine;
-}
-
-main section p {
-    position: absolute;
-    bottom: 10%;
-    left: 0;
-    background-color: blanchedalmond;
-
-} */
-
-a {
-    text-decoration: none;
-    color: aliceblue;
-}
-
+/* 
 @media screen and (max-width : 900px){
     header {
         flex-direction: column;
@@ -71,4 +98,12 @@ a {
         display: block;
         text-align: center;
     }
-}
+    .flexion-section {
+        flex-direction: column;
+    }
+    .section-heading {
+        border-bottom: 5px solid black;
+        border-right: 0ch;
+    }
+
+} */
